--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-    <!-- HEAD -->
-    <!-- For Metadata -->
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./assets/css/reset.css">
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-        <title>Corey Parker Design</title>
-        <meta name="Welcome to Corey Parker Design!">
-    </head>
-
-
+<!-- HEAD -->
+<!-- For Metadata -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <title>Corey Parker Design</title>
+    <link rel="shortcut icon" type="image/jpg" href="./assets/images/favicon.ico"/>
+    <meta name="Welcome to Corey Parker Design!">
+</head>
 
     <body>
         <div id="content-container">
             <div id="header-back">
                 <div id="content-width">
-
                     <!-- HEADER -->
                     <!-- Establishes the logo and navbar-->
-
                     <header>
                         <img id="logo" src="./assets/images/logo.png" alt="Logo for Corey Parker Design"/>
                         <div class="navbar">
@@ -31,10 +26,8 @@
                             <a class="navbar-style" href="#my-work"> My Work </a>
                         </div>
                     </header>
-
                     <!-- MAIN CONTENT -->                
                     <!-- About Me Section -->
-                        
                     <section class="flex-it">
                         <aside class="sidebar-left">
                             <div id="about-me" class="sidebar-styling">
