small css changes

--- a/index.html
+++ b/index.html
@@ -75,6 +75,46 @@
                             </div>
 
                             <div class="portfolio">
+                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
+                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                    <div class="portfolio-text-style">
+                                        <p>get.HAPI</p>
+                                    </div>
+                                </a>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                            </div>
+
+                            <div class="portfolio">
+                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
+                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                    <div class="portfolio-text-style">
+                                        <p>get.HAPI</p>
+                                    </div>
+                                </a>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                            </div>
+
+                            <div class="portfolio">
+                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
+                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                    <div class="portfolio-text-style">
+                                        <p>get.HAPI</p>
+                                    </div>
+                                </a>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                            </div>
+
+                            <div class="portfolio">
+                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
+                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                    <div class="portfolio-text-style">
+                                        <p>get.HAPI</p>
+                                    </div>
+                                </a>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                            </div>
+
+                            <div class="portfolio">
                                 <a class="box-hover" href="https://coreyparker12.github.io/Week6-WeatherAPI-CP/">
                                     <img src="./assets/images/weatherapi-logo.JPG" class="image-styling" alt="Link to the Weather Dashboard application."/>
                                     <div class="portfolio-text-style">
