adding new projects

--- a/index.html
+++ b/index.html
@@ -65,13 +65,23 @@
                             </div>
 
                             <div class="portfolio">
-                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
-                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                <a class="box-hover" href="https://toolin-around.herokuapp.com/">
+                                <img src="./assets/images/toolinaround-logo.JPG" class="image-styling" alt="Link to Toolin' Around application."/>
                                     <div class="portfolio-text-style">
-                                        <p>get.HAPI</p>
+                                        <p>Toolin' Around</p>
                                     </div>
                                 </a>
-                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Toolin-Around">Toolin' Around GitHub</a></p>
+                            </div>
+
+                            <div class="portfolio">
+                                <a class="box-hover" href="https://tech-blog-coreyparker.herokuapp.com/">
+                                <img src="./assets/images/simpletech-logo.JPG" class="image-styling" alt="Link to Simple Tech application."/>
+                                    <div class="portfolio-text-style">
+                                        <p>Simple Tech</p>
+                                    </div>
+                                </a>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Week14-Tech-Blog">Simple Tech GitHub</a></p>
                             </div>
 
                             <div class="portfolio">
@@ -85,33 +95,13 @@
                             </div>
 
                             <div class="portfolio">
-                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
-                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
+                                <a class="box-hover" href="https://note-taker-coreyparker.herokuapp.com/">
+                                <img src="./assets/images/notetaker-logo.JPG" class="image-styling" alt="Link to Note Taker application."/>
                                     <div class="portfolio-text-style">
-                                        <p>get.HAPI</p>
+                                        <p>Note Taker</p>
                                     </div>
                                 </a>
-                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
-                            </div>
-
-                            <div class="portfolio">
-                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
-                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
-                                    <div class="portfolio-text-style">
-                                        <p>get.HAPI</p>
-                                    </div>
-                                </a>
-                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
-                            </div>
-
-                            <div class="portfolio">
-                                <a class="box-hover" href="https://coreyparker12.github.io/Project-1-getHAPI/">
-                                <img src="./assets/images/getHAPI-logo.JPG" class="image-styling" alt="Link to get.HAPI application."/>
-                                    <div class="portfolio-text-style">
-                                        <p>get.HAPI</p>
-                                    </div>
-                                </a>
-                                <p><a class="github-links" href="https://github.com/CoreyParker12/Project-1-getHAPI">get.HAPI GitHub</a></p>
+                                <p><a class="github-links" href="https://github.com/CoreyParker12/Week11-Note-Taker">Note Taker GitHub</a></p>
                             </div>
 
                             <div class="portfolio">
